--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sass": "^1.71.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuedraggable": "^2.24.3",
     "vuefire": "^3.1.23",
     "vuex": "^4.0.0"
   },
