--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "firebase": "^10.8.1",
     "sass": "^1.71.1",
+    "typescript": "^5.4.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuedraggable": "^2.24.3",
