--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^5.0.8",
     "core-js": "^3.8.3",
     "firebase": "^10.8.1",
+    "pinia": "^2.1.7",
     "sass": "^1.71.1",
     "typescript": "^5.4.3",
     "uuid": "^9.0.1",
