--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "@vue/cli": "^5.0.8",
     "core-js": "^3.8.3",
     "firebase": "^10.8.1",
