--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue-stripe/vue-stripe": "^4.5.0",
     "@vue/cli": "^5.0.8",
+    "audiomotion-analyzer": "^4.4.0",
     "core-js": "^3.8.3",
     "firebase": "^10.8.1",
     "pinia": "^2.1.7",
@@ -17,6 +18,8 @@
     "typescript": "^5.4.3",
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
+    "vue-audiomotion": "^0.2.0",
+    "vue-audiomotion-analyzer": "^0.6.4",
     "vue-router": "^4.3.0",
     "vuedraggable": "^2.24.3",
     "vuefire": "^3.1.23",
