--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue-stripe/vue-stripe": "^4.5.0",
     "@vue/cli": "^5.0.8",
     "audiomotion-analyzer": "^4.4.0",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "firebase": "^10.8.1",
     "pinia": "^2.1.7",
@@ -20,6 +21,7 @@
     "vue": "^3.2.13",
     "vue-audiomotion": "^0.2.0",
     "vue-audiomotion-analyzer": "^0.6.4",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
     "vuedraggable": "^2.24.3",
     "vuefire": "^3.1.23",
