--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-audiomotion-analyzer": "^0.6.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0",
+    "vue-stripe-js": "^1.0.2",
     "vuedraggable": "^2.24.3",
     "vuefire": "^3.1.23",
     "vuex": "^4.1.0"
